# RecommendSystem

./: .gitignore  IntTowerRecommendModel.ipynb  IntTowerResidualRecommendModel.ipynb  Makefile  README.md  RecBoleTest.ipynb  TowTowerRecommendModel.ipynb  TowTowerRecommendModel_MovieLens_Test.ipynb  cvt_xlsx_to_pickle.py  main.py  pyproject.toml  tow_tower_recommend.py
.devcontainer/: devcontainer.json
data/: sample_merged_full.xlsx
dataset/profile/: profile.inter  profile.item
docker/: Dockerfile
docker/cpu/: docker-compose.yml
docker/gpu/: docker-compose.yml
notebook/: Content_base_filltering.ipynb  RecBoleTest.ipynb  TowTowerRecommendModel.ipynb  preprocessor.ipynb  ユーザベースの協調フィルタリング.ipynb
src/: __init__.py  feat.py  layers.py  models.py  processor.py  utils.py
tests/: test_utils.py
