[project]
name = "workspaces"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pandas>=2.2.2",
    "tensorflow>=2.16.1",
    "openpyxl>=3.1.3",
    "matplotlib>=3.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
main = "python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "jupyterlab>=4.1.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[tool.pytest.ini_options]
addopts = [
    "-ra"
]
testpaths = [
    "tests"
]
pythonpath="./src/"

[tool.ruff]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W"  # warning
]
ignore = []
fixable = ["ALL"]
exclude = [
    ".ruff_cache"
]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
force-single-line = true

[tool.ruff.pydocstyle]
convention = "google"

[[sources]]
name = "llama-cpp-python"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
type = "index"
