[project]
name = "workspaces"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.3",
    "matplotlib>=3.9.0",
    "torch==2.3.1+cu121",
    "tensorflow>=2.16.1",
    "polars>=0.20.31",
    "pyarrow>=16.1.0",
    "scikit-learn>=1.5.0",
    "tensorflow-recommenders>=0.7.3",
    "scann>=1.3.2",
    "tqdm>=4.64.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
main = "python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "jupyter>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[tool.pytest.ini_options]
addopts = [
    "-ra"
]
testpaths = [
    "tests"
]
pythonpath="./src/"

[tool.ruff]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W"  # warning
]
ignore = []
fixable = ["ALL"]
exclude = [
    ".ruff_cache"
]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
force-single-line = true

[tool.ruff.pydocstyle]
convention = "google"

[[sources]]
name = "llama-cpp-python"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
type = "index"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"
